--- a/views/index.html
+++ b/views/index.html
@@ -58,10 +58,6 @@
           <li><a class="display-all menu-item">View All</a></li>
           <li><a class="new-post menu-item">New Post</a></li>
         </ul>
-        <ul class="history-navgroup">
-          <li><a class="back-nav">< Back</a></li>
-          <li><a class="forward-nav">Forward ></a></li>
-        </ul>
       </div>
 
       <div class="hidden" id="entry-page">
@@ -92,7 +88,7 @@
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script src="scripts/index.js"></script>
   <script src="scripts/api.js"></script>
-
+  <script src="scripts/history.js"></script>
 </body>
 
 </html>
