--- a/views/index.html
+++ b/views/index.html
@@ -89,6 +89,7 @@
   <script src="scripts/index.js"></script>
   <script src="scripts/api.js"></script>
   <script src="scripts/history.js"></script>
+  <script src="scripts/templates.js"></script>
 </body>
 
 </html>
