--- a/views/index.html
+++ b/views/index.html
@@ -39,8 +39,8 @@
               <input type="text" id="username" name="username" class="login-field" required></label>
             <label for="pass">Password:
               <input type="password" id="pass" name="pass" class="login-field" required></label>
-            <label for="email" class="hidden" id="email">Email (optional):
-              <input type="text" id="email-field" name="email" class="login-field"></label>
+            <label for="email" class="hidden" id="email">Email:
+              <input type="text" id="email-field" name="email" class="login-field" required></label>
             </label>
           </fieldset>
           <button class="button" type="submit" id="btnlogin">Login</button>
