--- a/views/index.html
+++ b/views/index.html
@@ -40,7 +40,7 @@
             <label for="pass">Password:
               <input type="password" id="pass" name="pass" class="login-field" required></label>
             <label for="email" class="hidden" id="email">Email:
-              <input type="text" id="email-field" name="email" class="login-field" required></label>
+              <input type="text" id="email-field" name="email" class="login-field"></label>
             </label>
           </fieldset>
           <button class="button" type="submit" id="btnlogin">Login</button>
