--- a/views/index.html
+++ b/views/index.html
@@ -31,7 +31,10 @@
   <main role="main">
     <section role="section" class="" id="login-page">
       <div class="login-container">
-        <p class="orange">A simple blogging app to record dreams.</p>Enter login information below:
+        <p class="orange">A simple blogging app to record dreams.</p>
+        <p class="orange">Demo account (case sensitive):</p>
+        <p>Username: sampleuser  Password: samplepassword</p>
+        Enter login information below:
         <form class="js-login-form" role="post">
           <fieldset>
             <legend>Enter login information below:</legend>
